@@ -11,6 +11,6 @@
 <?php } elseif ($visible && $this->has_excerpt($event, $event->data[0])) { ?>
 <blockquote class="lifestream_blogpost">
 	<strong><a href="<?php echo $event->data[0]['link']; ?>"><?php echo htmlspecialchars($event->data[0]['title']); ?></a></strong><br/>
-	<?php echo htmlspecialchars(strip_tags($this->get_event_excerpt($event, $event->data[0]))); ?>
+	<?php echo nl2br(htmlspecialchars(strip_tags($this->get_event_excerpt($event, $event->data[0])))); ?>
 </blockquote>
 <?php } ?>
